--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+table{
+  border-collapse: collapse;
+  width: 60%;
+  border: black;
+}
+
+th,td{
+  border: 1 px solid #ffffff;
+  text-align: left;
+  padding: 8px;
+  font-size: 14px;
+}
+
+th{
+  background-color: rgb(117,201,250);
+
+}
+
+td{
+  background-color: rgb(205,235,253);
+}
+
+.p{
+  color: red;
+}
+
+.textinput{
+  width: 100%;
+}
